--- a/spring-cloud.properties
+++ b/spring-cloud.properties
@@ -1,3 +1,3 @@
 spring.cloud.appId: cloud-foundry-poc
 spring.cloud.mongo: mongodb://<UNAME>:<PASSWORD>@localhost:27017/<DB>
-spring.mail.host: mailhub.glebow.com
+spring.mail.host: mailhub.google.com
