--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 application.name=cloud-foundry-poc
 application.version=0.1
-spring.mail.host=mailhub.glebow.com
+spring.mail.host=mailhub.google.com
